<resources>
    <string name="app_name">Loq</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="use_the_20_most_popular_apps">Use the 20 most popular apps</string>
    <string name="see_apps">See apps</string>
    <string name="facebook_app_id">2345716189034287</string>
    <string name="fb_login_protocol_scheme">fb2345716189034287</string>
    <string name="select_day">Select Day</string>
    <string name="same_time_radio_button_text">Same time(s) for the selected days</string>
    <string name="ad_app_id">ca-app-pub-1891015983937837~6101872751</string>
    <string name="ad_video_link">ca-app-pub-1891015983937837/5886266247</string>
    <string name="delete_loq_time">Delete?</string>
    <string name="delete_loq_time_message">Would you like to delete this day and time interval?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="in_app_purchase_product_id">unlock_app_purchase</string>
    <string name="quick_loq_button_title">Add a Quick One Time Loq</string>
    <string name="one_time_loq_summary">Quick One-Time Loq</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="end_time">End Time</string>
    <string name="to">To</string>
    <string name="start_time">Start Time</string>
    <string name="error">Error</string>
    <string name="dismiss">Dismiss</string>
    <string name="confirm_selections_summary">Confirm Your Selections</string>
    <string name="commitment_checkbox_message">By checking this box I understand that I will be unable to change my settings (except for adding additional Loqs\'s unless it is the 1st day of the month, to enbrace the purpose of this mobile application. (Required)</string>
    <string name="pin_checkbox_message">This is for a minor\'s device and will require a PIN to change any settings.</string>
    <string name="pin_code">PIN code</string>
    <string name="re_enter_pin_code">Re-enter PIN</string>
    <string name="private_preference_key">private_pref_key</string>
    <string name="pin_dialog_title">Child Lock</string>
    <string name="pin_dialog_message">Enter PIN number</string>
    <string name="commitment_dialog_title">Commitment Violation</string>
    <string name="commitment_dialog_message">You can only remove loq times on the first of the month.</string>

</resources>
