<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_with_icon">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="164dp"
            android:layout_height="86dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:text="@string/confirm_selections_summary"
            android:textAlignment="center"
            android:textColor="#FDFDFD"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:background="@color/orange">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="App Name"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@android:color/white"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_bold"
                android:text="Days"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@android:color/white"
                android:layout_weight="1"
                android:text="Time(s)"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/white">

        </androidx.recyclerview.widget.RecyclerView>

        <CheckBox
            android:id="@+id/confirmCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="16dp"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:buttonTint="@android:color/white"
            android:text="@string/commitment_checkbox_message"/>

        <CheckBox
            android:id="@+id/pinCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="16dp"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:buttonTint="@android:color/white"
            android:text="@string/pin_checkbox_message"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/pinView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:hint="@string/pin_code"
                android:inputType="number"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:backgroundTint="@android:color/white"/>

            <EditText
                android:id="@+id/confirmPinView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="48dp"
                android:layout_weight="1"
                android:hint="@string/re_enter_pin_code"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:inputType="number"
                android:lines="1"
                android:backgroundTint="@android:color/white"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/orange"
            android:text="@string/back"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_bold"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/finishedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/green"
            android:text="@string/submit"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_bold"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:layout_weight="1"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>